--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,12 @@ julia:
   - 0.6
 notifications:
   email: false
-git:
-  depth: 99999999
 env:
- - PYTHON=""
-
-## uncomment the following lines to override the default test script
+ - PYTHON=Conda-python
 script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd())'
+  - export LD_LIBRARY_PATH=$HOME/.julia/v0.6/Conda/deps/usr/lib; LD_PRELOAD=${HOME}/.julia/v0.6/Conda/deps/usr/lib/libz.so julia -e 'Pkg.clone(pwd());Pkg.test("ParticleScattering"; coverage=true);'
+before_install:
   - julia -e 'ENV["PYTHON"]=""; Pkg.add("Conda"); using Conda; Conda.update(); Conda.add("matplotlib"); Conda.add("basemap"); Pkg.add("PyCall"); Pkg.build("PyCall"); Pkg.add("PyPlot");'
-  - julia -e 'Pkg.test("ParticleScattering")'
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("ParticleScattering"); Pkg.test("ParticleScattering"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   #- julia -e 'cd(Pkg.dir("ParticleScattering")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
