--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,7 +43,7 @@ build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
-      Pkg.clone(pwd(), \"ParticleScattering\"); Pkg.build(\"ParticleScattering\"); using Conda; Conda.add("basemap");"
+      Pkg.clone(pwd(), \"ParticleScattering\"); Pkg.build(\"ParticleScattering\"); using Conda; Conda.add(\"basemap\");"
 
 test_script:
   - C:\projects\julia\bin\julia -e "Pkg.test(\"ParticleScattering\")"
