--- a/.travis.yml
+++ b/.travis.yml
@@ -4,23 +4,29 @@ os:
   - linux
   - osx
 julia:
-  - 0.6
+  - 0.7
 branches:
-  except:
-    - dev
+  only:
+    - master
+    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 notifications:
   email: false
 env:
  - PYTHON=Conda-python
-script:
-  - export LD_LIBRARY_PATH=$HOME/.julia/v0.6/Conda/deps/usr/lib; LD_PRELOAD=${HOME}/.julia/v0.6/Conda/deps/usr/lib/libz.so julia -e 'using PyCall;pygui(:tk);using PyPlot;Pkg.clone(pwd());Pkg.test("ParticleScattering"; coverage=true);'
-before_install:
-  - julia -e 'ENV["PYTHON"]=""; Pkg.add("Conda"); using Conda; Conda.update(); Conda.add("matplotlib"); Conda.add("basemap"); Pkg.add("PyCall"); Pkg.build("PyCall"); Pkg.add("PyPlot");'
 after_success:
   #doc
-  - julia -e 'Pkg.add("Documenter")'
+  - julia -e 'using Pkg; Pkg.add("Documenter")'
   - julia -e 'cd(Pkg.dir("ParticleScattering")); include(joinpath("docs", "make.jl"))'
-  # push coverage results to Coveralls
-  # - julia -e 'cd(Pkg.dir("ParticleScattering")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("ParticleScattering")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+
+jobs:
+  include:
+    - stage: "Documentation"
+      julia: 0.7
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+                                               Pkg.instantiate()'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
