--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 name = "ParticleScattering"
 uuid = "3532a73c-0c3e-5edc-89e3-d771336b0a2d"
+version = "0.1.0"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
